--- a/app/src/main/res/layout/chess_board_activity.xml
+++ b/app/src/main/res/layout/chess_board_activity.xml
@@ -32,7 +32,7 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="56dp" />
 
-        <com.fict.chesspuzzle.Board
+        <com.fict.chesspuzzle.BoardView
             android:id="@+id/board_view"
             android:layout_width="match_parent"
             android:layout_height="545dp"
@@ -41,7 +41,7 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="81dp">
 
-        </com.fict.chesspuzzle.Board>
+        </com.fict.chesspuzzle.BoardView>
 
 
     </LinearLayout>
